# fast-api-template

./: .pre-commit-config.yaml  pyproject.toml
app/: main.py
app/api/: user.py
app/db/: base.py  session.py  user.py
app/models/: organization.py  user.py
app/schemas/: base.py
app/schemas/user/: user_req.py
app/services/: user.py
app/util/: config.py  exceptions.py
src/: main.py
src/api/: user.py
src/db/: base.py  session.py  user.py
src/models/: organization.py  user.py
src/schemas/: base.py
src/schemas/user/: user_req.py
src/services/: user.py
src/util/: config.py  exceptions.py
