[tool.poetry]
name = "fast-api-template"
version = "0.1.0"
description = ""
authors = ["Jagadeesh J <jagadeeshj@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.27"}
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
